--- a/.github/workflows/n2n_01x00_call-build-all.yml
+++ b/.github/workflows/n2n_01x00_call-build-all.yml
@@ -216,29 +216,29 @@ jobs:
                   LOG_INFO 'BUILD_PUSH: ${{ needs.check-pushed.outputs.BUILD_PUSH }}'
                   LOG_INFO "NEED_FIX: ${{ needs.check-init-version.outputs.NEED_FIX }}"
 
-    docker-n2n-build-test:
-        needs: [check-init-version, init-docker-tag]
-        uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
-        secrets: inherit
-        with:
-            VERSION_BIG: ${{ inputs.VERSION_BIG }}
-            VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
-            VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
-            VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
-            STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
-            STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
-            DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}
-            DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
-            DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}
-            DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}
-            DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}
-            DOCKER_BUILD_DOCKERFILE: ${{ needs.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}
-            DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}
-            IS_LATEST_VERSION: ${{ needs.check-init-version.outputs.IS_LATEST_VERSION == 'true' }}
-            DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}
-            DOCKER_PUSH: ${{ false }}
-            DOCKER_BUILD_DOCKERFILE_OK: ${{ inputs.DOCKER_BUILD_DOCKERFILE_OK }}
-            DOCKER_BUILD_DOCKERFILE_FIX: ${{ inputs.DOCKER_BUILD_DOCKERFILE_FIX }}
+    # docker-n2n-build-test:
+    #     needs: [check-init-version, init-docker-tag]
+    #     uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+    #     secrets: inherit
+    #     with:
+    #         VERSION_BIG: ${{ inputs.VERSION_BIG }}
+    #         VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
+    #         VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
+    #         VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
+    #         STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
+    #         STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
+    #         DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}
+    #         DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
+    #         DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}
+    #         DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}
+    #         DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}
+    #         DOCKER_BUILD_DOCKERFILE: ${{ needs.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}
+    #         DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}
+    #         IS_LATEST_VERSION: ${{ needs.check-init-version.outputs.IS_LATEST_VERSION == 'true' }}
+    #         DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}
+    #         DOCKER_PUSH: ${{ false }}
+    #         DOCKER_BUILD_DOCKERFILE_OK: ${{ inputs.DOCKER_BUILD_DOCKERFILE_OK }}
+    #         DOCKER_BUILD_DOCKERFILE_FIX: ${{ inputs.DOCKER_BUILD_DOCKERFILE_FIX }}
 
     docker-n2n-build-test-publish:
         needs:
@@ -246,7 +246,7 @@ jobs:
                 check-init-version,
                 init-docker-tag,
                 check-pushed,
-                docker-n2n-build-test,
+                # docker-n2n-build-test,
             ]
         if: ${{ needs.check-pushed.outputs.BUILD_PUSH == 'true' }}
         uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
