--- a/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+++ b/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
@@ -37,7 +37,7 @@ on:
                 required: true
                 type: string
             DOCKER_BUILD_DOCKERFILE:
-                description: "docker_build_dockerfile     e.g. Dockerfile | Dockerfile.build.debian-stable"
+                description: "docker_build_dockerfile     e.g. Dockerfile.run"
                 required: true
                 type: string
             DOCKER_APP_NAME:
@@ -74,12 +74,12 @@ on:
                 required: false
                 type: string
             DOCKER_BUILD_DOCKERFILE_FIX:
-                description: "docker_build_dockerfile_fix e.g. Dockerfile.build.debian-8 | Dockerfile.build.ubuntu-18.04"
-                default: "Dockerfile.build.debian-8"
+                description: "docker_build_dockerfile_fix e.g. Dockerfile.build.ubuntu-18.04 | Dockerfile.build.alpine-3.8 | Dockerfile.build.debian-stable"
+                default: "Dockerfile.build.debian-stable"
                 required: true
                 type: string
             DOCKER_BUILD_DOCKERFILE_OK:
-                description: "docker_build_dockerfile_ok  e.g. Dockerfile.build.debian-stable"
+                description: "docker_build_dockerfile_ok  e.g. Dockerfile.build.ubuntu-20.04 | Dockerfile.build.alpine-latest | Dockerfile.build.debian-stable"
                 default: "Dockerfile.build.debian-stable"
                 required: true
                 type: string
