--- a/n2n/docker-compose.test.yaml
+++ b/n2n/docker-compose.test.yaml
@@ -5,13 +5,14 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 172.77.6.0/24
+        - subnet: 10.62.83.0/24
+
 services:
   test-n2n_supernode:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
     container_name: test_n2n_supernode
     restart: always
     privileged: true
@@ -22,13 +23,13 @@ services:
       - N2N_ARGS=-v
     networks:
       n2n:
-        ipv4_address: 172.77.6.10
+        ipv4_address: 10.62.83.10
 
   test-n2n_edge_dhcpd:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
     container_name: test_n2n_edge_dhcpd
     restart: always
     privileged: true
@@ -39,7 +40,7 @@ services:
       - SUPERNODE_HOST=test-n2n_supernode
       - SUPERNODE_PORT=7777
       - EDGE_TUN=t_edge_dhcpd
-      - EDGE_IP=10.24.38.1
+      - EDGE_IP=10.63.83.1
       - EDGE_COMMUNITY=n2n_test
       - EDGE_KEY=test_n2n
       - EDGE_ENCRYPTION=-A2
@@ -55,7 +56,7 @@ services:
     depends_on:
       test-n2n_edge_dhcpd:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
     container_name: test_n2n_edge_dhcpc
     restart: always
     privileged: true
@@ -79,7 +80,7 @@ services:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
     container_name: test_n2n_edge_static
     restart: always
     privileged: true
@@ -90,7 +91,7 @@ services:
       - SUPERNODE_HOST=test-n2n_supernode
       - SUPERNODE_PORT=7777
       - EDGE_TUN=t_edge_static
-      - EDGE_IP=10.24.38.10
+      - EDGE_IP=10.63.83.10
       - EDGE_COMMUNITY=n2n_test
       - EDGE_KEY=test_n2n
       - EDGE_ENCRYPTION=-A2
@@ -104,7 +105,7 @@ services:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
     container_name: test_n2n_edge_conf
     restart: always
     privileged: true
@@ -118,12 +119,12 @@ services:
       n2n:
 
 
-  test-n2n_manual_server:
+  test-n2n_manual_cmd:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
-    container_name: test_n2n_edge_manual_server
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
+    container_name: test_n2n_edge_manual_cmd
     restart: always
     privileged: true
     platform: ${TEST_PLATFORM}
@@ -133,10 +134,10 @@ services:
     command:
       [
         "edge",
-        "-d t_edge_manual",
-        "-a 10.24.38.42",
+        "-d t_edge_m_s",
+        "-a 10.63.83.42",
         "-c n2n_test",
-        "-l 172.77.6.10:7777",
+        "-l 10.62.83.10:7777",
         "-k test_n2n",
         "-A2"
       ]
@@ -144,12 +145,12 @@ services:
       n2n:
 
 
-  test-n2n_manual:
+  test-n2n_manual_raw:
     depends_on:
       test-n2n_edge_dhcpd:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
-    container_name: test_n2n_edge_manual
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${BUILD_TAG}
+    container_name: test_n2n_manual_raw
     restart: always
     privileged: true
     platform: ${TEST_PLATFORM}
@@ -160,7 +161,7 @@ services:
       [
         "/bin/bash",
         "-c",
-        "edge -d t_edge_manual -a dhcp:0.0.0.0 -c n2n_test -l 172.77.6.10:7777  -k test_n2n -Efr -A2 & sleep 5 && dhclient --dad-wait-time 5 t_edge_manual && /bin/busybox ping 10.24.38.42"
+        "edge -d t_edge_m_raw -a dhcp:0.0.0.0 -c n2n_test -l 10.62.83.10:7777  -k test_n2n -Efr -A2 & sleep 5 && dhclient --dad-wait-time 5 t_edge_m_raw && /bin/busybox ping 10.63.83.42"
       ]
     networks:
       n2n:
@@ -174,7 +175,7 @@ services:
           "1",
           "-w",
           "2",
-          "10.24.38.42"
+          "10.63.83.42"
         ]
       interval: 30s
       timeout: 10s
