--- a/.github/workflows/n2n_02x01_call-check-pushed.yml
+++ b/.github/workflows/n2n_02x01_call-check-pushed.yml
@@ -13,7 +13,7 @@ on:
                 required: true
                 type: string
             DOCKER_TEST_TAG:
-                description: "version_b_s_rc        e.g. v3 | v3_3.1.1_r1255"
+                description: "docker_test_tag        e.g. v3 | v3_3.1.1_r1255"
                 required: true
                 type: string
             FORCE_PUSH:
@@ -32,6 +32,7 @@ on:
 
 jobs:
     check-push:
+        name: ${{ inputs.DOCKER_TEST_TAG }} - "check-push"
         runs-on: ubuntu-latest
         # needs: [init-version]
         # if: inputs.FORCE_PUSH != 'true'
@@ -45,13 +46,13 @@ jobs:
             packages: write
 
         steps:
-            - name: Get tag-last-pushed-info
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - Get tag-last-pushed-info
               id: get-tag-last-pushed-info
               run: |
                   result="$(curl -k -sS https://hub.docker.com/v2/repositories/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}/tags/${{ inputs.DOCKER_TEST_TAG }})"
                   echo "result=${result}" >> $GITHUB_OUTPUT
 
-            - name: Check tag-last-pushed-date
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - Check tag-last-pushed-date
               id: check-tag-last-pushed-date
               run: |
                   LOG_INFO() {
