--- a/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+++ b/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
@@ -83,7 +83,10 @@ on:
                 default: "Dockerfile.build.debian-stable"
                 required: true
                 type: string
-
+        outputs:
+            DOCKER_BUILD_DOCKERFILE:
+                description: "docker build dockerfile"
+                value: ${{ jobs.docker-build-psuh.outputs.DOCKER_BUILD_DOCKERFILE }}
 env:
     # Use docker.io for Docker Hub if empty
     # REGISTRY: ghcr.io
@@ -91,7 +94,7 @@ env:
 
 jobs:
     docker-build-psuh:
-        name: docker-build-psuh - ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }}
+        name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - docker-build-psuh
         runs-on: ubuntu-latest
         permissions:
             contents: read
@@ -99,11 +102,14 @@ jobs:
             # This is used to complete the identity challenge
             # with sigstore/fulcio when running outside of PRs.
             id-token: write
+        outputs:
+            DOCKER_BUILD_DOCKERFILE: ${{ steps.n2n-test.outputs.DOCKER_BUILD_DOCKERFILE }}
+
         steps:
-            - name: Checkout repository on build-psuh
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Checkout repository on build-psuh
               uses: actions/checkout@v3
 
-            - name: init DOCKER_BUILD
+            - name: init DOCKER_BUILD - ${{ inputs.DOCKER_TEST_TAG }}
               run: |
                   echo "DOCKER_PUSH          : ${{ inputs.DOCKER_PUSH }}"
                   echo "DOCKER_PUSH == true  : ${{ inputs.DOCKER_PUSH == true }}"
@@ -115,24 +121,24 @@ jobs:
                   echo '# cat ./n2n/tmp/down_urls.txt #'
                   cat ./n2n/tmp/down_urls.txt
 
-            - name: Set up QEMU
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Set up QEMU
               uses: docker/setup-qemu-action@v2
 
             # Install the cosign tool except on PR
             # https://github.com/sigstore/cosign-installer
-            - name: Install cosign
+            - name: Install cosign - ${{ inputs.DOCKER_TEST_TAG }}
               if: inputs.DOCKER_PUSH == true
               uses: sigstore/cosign-installer@v3.0.5
               with:
                   cosign-release: "v2.0.2" # optional
 
             # Workaround: https://github.com/docker/build-push-action/issues/461
-            - name: Setup Docker buildx
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Setup Docker buildx
               uses: docker/setup-buildx-action@v2
 
             # Login against a Docker registry except on PR
             # https://github.com/docker/login-action
-            - name: Log into registry ${{ env.REGISTRY }}
+            - name: Log into registry ${{ env.REGISTRY }} - ${{ inputs.DOCKER_TEST_TAG }}
               # if: inputs.DOCKER_PUSH == true
               uses: docker/login-action@v2
               with:
@@ -142,7 +148,7 @@ jobs:
 
             # Extract metadata (tags, labels) for Docker
             # https://github.com/docker/metadata-action
-            - name: Extract Docker metadata
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Extract Docker metadata
               id: meta
               uses: docker/metadata-action@v4
               with:
@@ -161,7 +167,7 @@ jobs:
 
             # Build and push Docker image with Buildx (don't push on PR)
             # https://github.com/docker/build-push-action
-            - name: Build and push Docker image
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Build and push Docker image
               id: build-and-push
               uses: docker/build-push-action@v4
               with:
@@ -179,9 +185,9 @@ jobs:
                       VERSION_SMALL=${{ inputs.VERSION_SMALL }}
                       VERSION_COMMIT=${{ inputs.VERSION_COMMIT }}
                       VERSION_B_S_rC=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-                    #   STR_DOWNLOAD_URLS=${{ inputs.STR_DOWNLOAD_URLS }}
+                  #   STR_DOWNLOAD_URLS=${{ inputs.STR_DOWNLOAD_URLS }}
 
-            - name: Test n2n
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Test n2n
               id: n2n-test
               run: |
                   cd n2n/scripts/build
@@ -237,7 +243,7 @@ jobs:
             # repository is public to avoid leaking data.  If you would like to publish
             # transparency data even for private images, pass --force to cosign below.
             # https://github.com/sigstore/cosign
-            - name: Sign the published Docker image
+            - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Sign the published Docker image
               if: inputs.DOCKER_PUSH == true
               env:
                   COSIGN_EXPERIMENTAL: "true"
