--- a/.github/workflows/docker-publish-frp.yml
+++ b/.github/workflows/docker-publish-frp.yml
@@ -26,6 +26,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ false }}
     permissions:
       contents: read
       packages: write
