--- a/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+++ b/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
@@ -190,51 +190,54 @@ jobs:
             - name: ${{ inputs.DOCKER_TEST_TAG }} - ${{ inputs.DOCKER_PUSH }} - Test n2n
               id: n2n-test
               run: |
-                  cd n2n/scripts/build
-                  chmod +x *.sh
-                  source 0x0_init-logger.sh
+                  cd ${{ inputs.DOCKER_CONTEXT_PATH }}
+                  LOG_INFO() {
+                    echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
+                  }
 
-                  LOG_WARNING "Test start: ${{ inputs.VERSION_B_S_rC }}"
-                  flag_test_pass="true"
-                  platforms=${{ inputs.DOCKER_BUILD_PLATFORMS }}
-                  l_platforms=(${platforms//,/ })
-                  for test_platform in ${l_platforms[@]};do
-                    LOG_WARNING "Test for platform: ${test_platform}"
-                    edge_result="$(docker run --rm \
-                      --platform ${test_platform} \
-                      ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}:${{ inputs.DOCKER_TEST_TAG }} \
-                      edge -h 2>&1 | xargs -I {} echo {})"
-                    if [[ -z "$(echo ${edge_result,,} | grep welcome)" ]]; then
-                      LOG_ERROR 出错了: ${test_platform} - ${edge_result}
-                      flag_test_pass="false"
-                      continue
+                  LOG_ERROR() {
+                    echo -e $(caller) "\033[0;31m[   ERROR] $@ \033[0m"
+                    if [[ -n "${WAIT_DEBUG}" ]]; then
+                        sleep 3
                     fi
-                    docker run --rm \
-                      --platform ${test_platform} \
-                      ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}:${{ inputs.DOCKER_TEST_TAG }} \
-                      ls /usr/local/sbin/edge
-                    docker run --rm \
-                      --platform ${test_platform} \
-                      ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}:${{ inputs.DOCKER_TEST_TAG }} \
-                      edge -h 2>&1 | xargs -I {} echo {}
-                    LOG_WARNING "Test pass - edge"
-                    docker run --rm \
-                      --platform ${test_platform} \
-                      ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}:${{ inputs.DOCKER_TEST_TAG }} \
-                      ls /usr/local/sbin/supernode
-                    # supernode will not pass
-                    docker run --rm \
-                      --platform ${test_platform} \
-                      ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}:${{ inputs.DOCKER_TEST_TAG }} \
-                      supernode -h 2>&1 | xargs -I {} echo {} || echo -e "\n# check supernode ignore errors"
-                    # LOG_WARNING "Test done - supernode"
-                  done
-                  if [[ "${flag_test_pass}" != "true" ]]; then
+                  }
+
+                  LOG_WARNING() {
+                    echo -e $(caller) "\033[0;33m[ WARNING] $@ \033[0m"
+                    if [[ -n "${WAIT_DEBUG}" ]]; then
+                        sleep 1
+                    fi
+                  }
+
+                  if [[ ! -r test/docker-build-test.sh ]]; then
+                    LOG_ERROR '测试文件读取失败, 跳过测试.'
+                    exit 0
+                  fi
+                  chmod +x test/*.sh
+                  LOG_INFO "Test start: ${{ inputs.VERSION_B_S_rC }}"
+                  FLAG_TEST_PASS="true"
+                  
+                  REGISTRY='${{ env.REGISTRY }}'
+                  REGISTRY_USERNAME='${{ secrets.REGISTRY_USERNAME }}'
+                  DOCKER_APP_NAME='${{ inputs.DOCKER_APP_NAME }}'
+                  DOCKER_TEST_TAG='${{ inputs.DOCKER_TEST_TAG }}'
+                  DOCKER_BUILD_PLATFORMS='${{ inputs.DOCKER_BUILD_PLATFORMS }}'
+                  export REGISTRY="${REGISTRY}"
+                  export REGISTRY_USERNAME="${REGISTRY_USERNAME}"
+                  export DOCKER_APP_NAME="${DOCKER_APP_NAME}"
+                  export DOCKER_TEST_TAG="${DOCKER_TEST_TAG}"
+                  export DOCKER_BUILD_PLATFORMS="${DOCKER_BUILD_PLATFORMS}"
+                  
+                  ####################################
+                  source test/docker-build-test.sh
+                  ####################################
+
+                  if [[ "${FLAG_TEST_PASS}" != "true" ]]; then
                     LOG_ERROR "Test faild: ${{ inputs.VERSION_B_S_rC }}"
                     echo "DOCKER_BUILD_DOCKERFILE=${{ inputs.DOCKER_BUILD_DOCKERFILE_OK }}">> $GITHUB_OUTPUT
                     exit 1
                   fi
-                  LOG_WARNING "Test done: ${{ inputs.VERSION_B_S_rC }}"
+                  LOG_INFO "Test done: ${{ inputs.VERSION_B_S_rC }}"
                   echo "DOCKER_BUILD_DOCKERFILE=${{ inputs.DOCKER_BUILD_DOCKERFILE_FIX }}">> $GITHUB_OUTPUT
                   exit 0
 
@@ -249,4 +252,4 @@ jobs:
                   COSIGN_EXPERIMENTAL: "true"
               # This step uses the identity token to provision an ephemeral certificate
               # against the sigstore community Fulcio instance.
-              run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign --yes {}@${{ steps.build-and-push.outputs.digest }}
+              run: echo "${{ steps.meta.outputs.tags }}" | xargs -0 --no-run-if-empty -I {} cosign sign --yes {}@${{ steps.build-and-push.outputs.digest }}
